Bug 374881 - Lags when resizing Qt4 windows on Wayland
Summary: Lags when resizing Qt4 windows on Wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.8.5
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D7524
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-10 19:14 UTC by Igor Poboiko
Modified: 2017-08-25 13:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: Wayland+
mgraesslin: X11-
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Poboiko 2017-01-10 19:14:41 UTC
When I resize freshly opened Skype window (either maximized from the tray icon or just new instance of skype), it only resizes by several pixels (it resizes the window twice) and then freezes. After randomly moving/resizing the window several times (didn't manage to find regularity), resize starts working well.

Apparently, this is an issue with Qt4 applications: I've managed to reproduce it only with Skype and FBReader. It is also an issue with Wolfram Mathematica; however, not sure which toolkit they use.
I've also tested Qt5 applications with both wayland and xcb platforms (Dolphin), GTK applications (Inkscape), some Java applications (SweetHome3D) -- all of them work fine.
Comment 1 Martin Flöser 2017-07-22 12:42:05 UTC
Unfortunately I don't have any Qt 4 applications around any more to test.
Comment 2 Martin Flöser 2017-07-22 19:56:11 UTC
Just found one by accident: kdebugdialog and unfortunately I must confirm the behavior you describe.
Comment 3 Patrick Silva 2017-08-06 17:29:40 UTC
Resize xwayland apps (qt4 and gtk3) is not smooth on neon dev unstable.
And I see black borders similar to that
https://bug767212.bugzilla-attachments.gnome.org/attachment.cgi?id=329082
It's more evident when I resize vlc player window.
Comment 4 Martin Flöser 2017-08-24 15:02:18 UTC
I figured out why this happens: the timestamp handling only works on X11, thus the sync request has an outdated timestamp.
Comment 5 Martin Flöser 2017-08-24 18:51:22 UTC
Workaround at: https://phabricator.kde.org/D7524
Comment 6 Martin Flöser 2017-08-25 13:50:00 UTC
Git commit 6f4c02ce10186fe966bce1ead63144e845bc74fe by Martin Flöser.
Committed on 25/08/2017 at 13:49.
Pushed by graesslin into branch 'master'.

Disable synced resizing for X11 clients on Xwayland

Summary:
The sync is broken due to updateXTime not working correctly on Wayland.
As the broken sync results in a very unsmooth resize experience it is
better to disable it for the time being.

Once we have a solution for updateXTime it should be enabled again.

Test Plan: Run nested kwin_wayland and resized Qt 4 application

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D7524

M  +3    -1    client.cpp

https://commits.kde.org/kwin/6f4c02ce10186fe966bce1ead63144e845bc74fe